# retina_ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/oct/: oct_resnet18.classes.json
models/oct8/: oct_resnet18_c8.classes.json
retina_ai/: __init__.py
retina_ai/apps/: __init__.py  oct_screening.py  oct_screening_basic.py  secure_dr_oct.py
retina_ai/scripts/: __init__.py  test_inference.py  train_oct8.py
